Maybe printf will work

--- a/rickroll-lang/Dockerfile
+++ b/rickroll-lang/Dockerfile
@@ -2,6 +2,6 @@ FROM fusionsid/ricklang
 
 ARG CODE
 
-RUN echo -e "${CODE}" > code.rickroll
+RUN printf "${CODE}" > code.rickroll
 
 CMD ["timeout", "-s", "KILL", "5", "python3", "RickRoll.py", "code.rickroll"]   
